# pppp

./: .gitignore  .releaserc.json  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  test.yml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  httproute.yaml  secrets.yaml  service.yaml
src/pppp/: main.py  settings.py
src/pppp/api/: image_io.py  models.py  ocr.py  tags.py
src/pppp/engine/: paddle.py  rampp.py
src/pppp/utils/: images.py
